# OpenUKGE

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  cn15k_train_PASSLEAF_demo.py  nl27k_UKGE_demo.py  pyproject.toml  requirements.txt  run.py  setup.cfg
data/nl27k/: entity_id.csv  relation_id.csv  softlogic.tsv  test.tsv  test_with_neg.tsv  val.tsv
examples/cn15k/BEUrRE/: cn15k_BEUrRE_train_rule1.py  cn15k_BEUrRE_train_rule2.py
examples/cn15k/FocusE/: cn15k_train_focuse.py
examples/cn15k/GMUC/: cn15k_train_GMUC.py
examples/cn15k/GtransE/: cn15k_gtranse.py
examples/cn15k/PASSLEAF/: cn15k_train_PASSLEAF_distmult.py
examples/cn15k/UKGE/: cn15k_UKGE_train.py
examples/cn15k/UKGE_PSL/: cn15k_UKGEPSL_train.py
examples/cn15k/UKGsE/: cn15k_UKGsE_train.py
examples/cn15k/UPGAT/: cn15k_upgat_train.py
openukge/data/: __init__.py  dataset.py  load_data.py  ukg_data_module.py  ukg_sampler.py  word_vec_data.py
openukge/evaluation/: ECE.py  __init__.py  confidence_prediction.py  link_predict.py  mean_ndcg.py
openukge/loss/: __init__.py  beurre_loss.py  focuse_loss.py  gmuc_loss.py  gtranse_loss.py  passleaf_loss.py  ukge_loss.py  ukge_psl_loss.py  ukgse_loss.py  upgat_loss.py
openukge/models/: __init__.py
openukge/training/: __init__.py  beurre_trainer.py  focuse_trainer.py  gmuc_trainer.py  gtranse_trainer.py  passleaf_trainer.py  ukge_psl_trainer.py  ukge_trainer.py  ukgse_trainer.py  upgat_trainer.py  word_vec_trainer.py
openukge/utils/: __init__.py  device.py  download.py  seed.py
src/: data.py  list.py  models.py  param.py  testers.py  trainer.py
(+39 files in other folders)
