[metadata]
name = OpenUKGE
version = 1.0.0
description = OpenUKGE: An open-source Python library for uncertain knowledge graph embedding.
long_description = file: README.md
long_description_content_type = text/markdown
author = LiJianjing
license = GPL-3.0-or-later
url = https://github.com/Chienking1997/OpenUKGE


[options]
packages = find:
python_requires = >=3.8, <4.0
include_package_data = True
zip_safe = False


[options.packages.find]
where = .